Fix jewel main image alignment.

--- a/css/jewel.css
+++ b/css/jewel.css
@@ -20,7 +20,6 @@
     background-position: center;
     background-color: rgba(0, 0, 0, .30);
     height: 100%;
-    position: absolute;
 }
 
 /*About Section*/
